test/snapshots/find-unused-exports/unparsable-module-stderr-node-v10.txt
[1m[31m
Error running find-unused-exports:
[22m[39m
  { SyntaxError: <path>/a.txt: Unexpected token (2:0)
  
    1 | // A syntax error so Babel can’t parse this file.
  > 2 | *
      | ^
    3 | 
    loc: Position { line: 2, column: 0 },
    pos: 50,
    code: 'BABEL_PARSE_ERROR' } '\n'
